# swagger/swagger.json
@@ -35,13 +35,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/http.HTTPError"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/http.HTTPError"
+                            "type": "string"
                         }
                     }
                 }
@@ -49,16 +49,15 @@
         }
     },
     "definitions": {
-        "http.HTTPError": {
+        "sql.NullString": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 400
+                "string": {
+                    "type": "string"
                 },
-                "message": {
-                    "type": "string",
-                    "example": "status bad request"
+                "valid": {
+                    "description": "Valid is true if String is not NULL",
+                    "type": "boolean"
                 }
             }
         },
@@ -81,13 +80,13 @@
             "type": "object",
             "properties": {
                 "email": {
-                    "type": "string"
+                    "$ref": "#/definitions/sql.NullString"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "password": {
-                    "type": "string"
+                    "$ref": "#/definitions/sql.NullString"
                 }
             }
         }
